crates/aranya-policy-compiler/tests/data/functions/wrong_arg_count_bad_argument.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: bad argument
  |
6 |     return f()
  |            ^ call to `f` has 0 arguments and it should have 1
